--- a/MeuSiteEmMVC/appsettings.json
+++ b/MeuSiteEmMVC/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Server=./;Database=DB_SistemaContatos;Integrated Security=SSPI;TrustServerCertificate=True"
+    "myconn": "Server=./;Database=DB_SistemaContatos;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
